<resources>
    <string name="app_name">Tester</string>
    <string name="button_run_text">Run demo test</string>

    <string name="exit_button_text">Exit</string>
    <string name="check_button_text">Check</string>
    <string name="next_button_text">Next</string>
    <string name="finish_button_text">Finish</string>

    <string name="you_answered_correct">You answered correct</string>
    <string name="you_answered_incorrect">You answered incorrect</string>

    <string name="question_">Question\u0020</string>
    <string name="_of_">\u0020of\u0020</string>

    <string name="no_checked_items">Please answer</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="you_sure">You sure?</string>
    
    <string name="you_scored_">You answered\u0020</string>
    <string name="_out_of_">\u0020of\u0020</string>
    <string name="_points">\u0020questions correctly</string>

    <string name="to_main_menu">To the main menu</string>
</resources>
